--- a/whisperlivekit/web/live_transcription.html
+++ b/whisperlivekit/web/live_transcription.html
@@ -321,7 +321,7 @@
         const timerElement = document.querySelector(".timer");
 
         const host = window.location.hostname || "localhost";
-        const port = window.location.port || "8000";
+        const port = window.location.port;
         const protocol = window.location.protocol === "https:" ? "wss" : "ws";
         const defaultWebSocketUrl = `${protocol}://${host}:${port}/asr`;
         websocketInput.value = defaultWebSocketUrl;
