--- a/whisperlivekit/web/live_transcription.html
+++ b/whisperlivekit/web/live_transcription.html
@@ -26,28 +26,29 @@
         <input id="websocketInput" type="text" placeholder="ws://host:port/asr" />
       </div>
 
-      <div class="field">
-        <label>Theme</label>
-        <div class="segmented" role="radiogroup" aria-label="Theme selector">
-          <input type="radio" id="theme-system" name="theme" value="system" />
-          <label for="theme-system" title="System">
-            <img src="/web/src/system_mode.svg" alt="" />
-            <span>System</span>
-          </label>
-
-          <input type="radio" id="theme-light" name="theme" value="light" />
-          <label for="theme-light" title="Light">
-            <img src="/web/src/light_mode.svg" alt="" />
-            <span>Light</span>
-          </label>
-
-          <input type="radio" id="theme-dark" name="theme" value="dark" />
-          <label for="theme-dark" title="Dark">
-            <img src="/web/src/dark_mode.svg" alt="" />
-            <span>Dark</span>
-          </label>
-        </div>
       </div>
+    </div>
+  </div>
+
+  <div class="theme-selector-container">
+    <div class="segmented" role="radiogroup" aria-label="Theme selector">
+      <input type="radio" id="theme-system" name="theme" value="system" />
+      <label for="theme-system" title="System">
+        <img src="/web/src/system_mode.svg" alt="" />
+        <span>System</span>
+      </label>
+
+      <input type="radio" id="theme-light" name="theme" value="light" />
+      <label for="theme-light" title="Light">
+        <img src="/web/src/light_mode.svg" alt="" />
+        <span>Light</span>
+      </label>
+
+      <input type="radio" id="theme-dark" name="theme" value="dark" />
+      <label for="theme-dark" title="Dark">
+        <img src="/web/src/dark_mode.svg" alt="" />
+        <span>Dark</span>
+      </label>
     </div>
   </div>
 
