--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+     <div id="audioPermission"></div>
     <div class="settings-container">
         <button id="recordButton">
             <div class="shape-container">
@@ -28,12 +29,12 @@
                 <input id="websocketInput" type="text" placeholder="ws://host:port/asr" />
             </div>
 
-            <!-- <div class="field">
+            <div class="field">
                 <label id="microphoneSelectLabel" for="microphoneSelect">Select Microphone</label>
                 <select id="microphoneSelect">
                     <option value="">Default Microphone</option>
                 </select>
-            </div> -->
+            </div>
 
             <div class="theme-selector-container">
                 <div class="segmented" role="radiogroup" aria-label="Theme selector">
@@ -67,7 +68,7 @@
 
     <div id="linesTranscript"></div>
 
-    <script src="/web/live_transcription.js"></script>
+    <script src="live_transcription.js"></script>
 </body>
 
 </html>
