revamp chromium extension settings

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-     <div id="audioPermission"></div>
     <div class="settings-container">
         <button id="recordButton">
             <div class="shape-container">
@@ -23,6 +22,10 @@
             </div>
         </button>
 
+        <button id="settingsToggle" class="settings-toggle" title="Show/hide settings">
+            <img src="/web/src/settings.svg" alt="Settings" />
+        </button>
+
         <div class="settings">
             <div class="field">
                 <label for="websocketInput">Websocket URL</label>
@@ -34,6 +37,8 @@
                 <select id="microphoneSelect">
                     <option value="">Default Microphone</option>
                 </select>
+                        <div id="audioPermission"></div>
+
             </div>
 
             <div class="theme-selector-container">
@@ -41,25 +46,24 @@
                     <input type="radio" id="theme-system" name="theme" value="system" />
                     <label for="theme-system" title="System">
                         <img src="/web/src/system_mode.svg" alt="" />
-                        <span>System</span>
+                        <!-- <span>System</span> -->
                     </label>
 
                     <input type="radio" id="theme-light" name="theme" value="light" />
                     <label for="theme-light" title="Light">
                         <img src="/web/src/light_mode.svg" alt="" />
-                        <span>Light</span>
+                        <!-- <span>Light</span> -->
                     </label>
 
                     <input type="radio" id="theme-dark" name="theme" value="dark" />
                     <label for="theme-dark" title="Dark">
                         <img src="/web/src/dark_mode.svg" alt="" />
-                        <span>Dark</span>
+                        <!-- <span>Dark</span> -->
                     </label>
                 </div>
             </div>
 
         </div>
-    </div>
     </div>
 
 
